--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Your Name :: About Me</title>
+    <title>Flynn :: About Me</title> 
+    <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
     <div class="container">
       <div class="header">
         <div class="logo">
-          <h1><a href="#">Add Your Name</a></h1>
+          <h1> <a style = "color: #000000" href="#">Flynn</a></h1>
         </div>
         <nav>
           <ul>
@@ -21,7 +22,7 @@
       </div>
       <div class="content">
         <div class="section">
-          <h2>Welcome</h2>
+          <h2>Welcome</h2>  
           <p>
             <img
               src="images/dishOne.jpg"
@@ -29,7 +30,7 @@
               width="900"
               height="200"
             />
-          </p>
+          </p> 
           <p class="firstPara">
             Any budding web designer or web developers needs to grasp the
             concept of the 'big' three. These are the core open standard skills
@@ -46,7 +47,7 @@
             pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
             culpa qui officia deserunt mollit anim id est laborum
           </p>
-          <p>
+          <p class = "para">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
             ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
