--- a/skill-set.html
+++ b/skill-set.html
@@ -2,13 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Your Name :: Skill Set</title>
+    <title>Flynn :: Skill Set</title> 
+    <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
     <div class="container">
       <div class="header">
         <div class="logo">
-          <h1><a href="#">Your Name</a></h1>
+          <h1> <a style = "color: #000000" href="#">Flynn</a></h1>
         </div>
         <nav>
           <ul>
